[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Use stable crates.io Alloy 0.7 release versions (last aligned release)
alloy-primitives  = "0.7.7"
alloy-sol-types   = "0.7.7"
alloy-consensus   = "0.7.7"
alloy-serde       = "0.7.7"
alloy-rlp         = "0.7.7"
alloy-trie        = "0.7.7"

